--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -8,6 +8,7 @@
             <main>
                 <form class="product-form" method="post"
                     action="<% if (editing) { %>/admin/edit-product<% } else { %>/admin/add-product<% } %>">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <div class="form-control">
                         <label for="title">Title</label>
                         <input type="text" name="title" id="title"
