--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -27,6 +27,7 @@
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%= product._id%>" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="post">
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                         <input type="hidden" name="productId" value="<%= product._id %>" />
                                         <button type="submit" class="btn">Delete</button>
                                     </form>
