--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,4 +1,5 @@
 <form action="/cart" method="post">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <button type="submit" class="btn">
         Add to Cart
     </button>
