--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -15,6 +15,7 @@
                                 <h2>Quantity: <%= product.quantity %>
                                 </h2>
                                 <form action="/cart-delete-item" method="post">
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                     <input type="hidden" name="productId" value="<%= product._id %>">
                                     <button type="submit" class="btn danger">Delete</button>
                                 </form>
@@ -25,6 +26,7 @@
                     <hr>
                     <div class="centered">
                         <form action="/create-order" method="post">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <button class="btn" type="submit">Checkout</button>
                         </form>
                     </div>
